# verbeat

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  index.html  logo_prompt.md  verbeat.version  version.json
.github/workflows/: test-website.yml  test.yml
hooks/: pre-commit
implementations/: index.html
implementations/nodejs/: .npmignore  LICENSE  Makefile  README.md  eslint.config.js  package.json  verbeat.version
implementations/nodejs/src/: verbeat.js
implementations/nodejs/tests/: test_verbeat.js
implementations/python/: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_git_edge_cases.py  test_verbeat.py  verbeat.py  verbeat.version
scripts/: get_version.py  install-hooks.sh
